--- a/app/core/text/style/primaryTypography.module.css
+++ b/app/core/text/style/primaryTypography.module.css
@@ -13,8 +13,15 @@
 
 .h6{
     color: black; 
+    font-size: 16px;
  }
 
 .body1{
     color: #666666;
+    font-size: 14px;
+}
+
+.body1Black{
+    color: black;
+    font-size: 14px;
 }
